--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-easy-crop": "^4.7.4",
+    "react-image-crop": "^10.0.9",
     "typescript": "4.9.4"
   },
   "devDependencies": {
